crates/test-files/fixtures/compile_errors/emit_bad_args.fe
use std::context::Context

contract Bar {
    event Foo {
        idx x: address
        y: u256
        z: bool
    }

    pub fn test(ctx: Context) {
        emit Foo(ctx, (1, 2), z: 10, y: true, x: 5)
    }
}
